Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126305

Setting camera pixel format and resolution is failed.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.5.7, 6.5.9, 6.7.3, 6.8.2, 6.8, 6.9.0 Beta2, 6.10.0 FF
    • 6.7.1
    • Multimedia
    • None
    • Mac mini, MacOS M1 64bit, Sonoma 14.5
      XCode: 15.2
      Qt 6.7.1, QT_MEDIA_BACKEND = ffmpeg

      Hello,
      My environment is below,
      Mac mini, MacOS M1 64bit, Sonoma 14.5
      XCode: 15.2
      Qt 6.7.1, QT_MEDIA_BACKEND = ffmpeg

      I use QCamera and QVideoSink for video streaming capturing,
      When I set camera pixel format and resolution to my camera,
      The following message dumps in the console,
      1. Motion-JPEG:
      Cannot find AVCaptureDeviceFormat; Did you use format from another camera?
      qt.multimedia.camera: Videotoolbox doesn't support cvPixelFormat: 0 "\x00\x00\x00\x00" Camera pix format: Format_NV12.
      2. YUY2:
      qt.multimedia.camera: Videotoolbox doesn't support cvPixelFormat: 2037741171 "yuvs" Camera pix format: Format_YUYV.

      May I know if I misunderstand something?

      Thanks.
      Have a nice day.

        For Gerrit Dashboard: QTBUG-126305
        # Subject Branch Project Status CR V

            npskalerud Nils Petter Skålerud
            wunian Wunian LEE
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: